--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "extra-gbk",
   "version": "1.0.0",
-  "description": "extra message source",
+  "description": "extra gbk message source",
   "bin": {
     "extra-gbk": "./bin/index.js"
   },
@@ -21,5 +21,9 @@
     "co": "^4.6.0",
     "co-prompt": "^1.0.0",
     "fs-extra": "^8.1.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/codeManage/extra-gbk.git"
   }
 }
