fix:纠正部分命名

--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "extra-gbk",
+  "name": "extract-gbk",
   "version": "1.0.0",
-  "description": "extra gbk message source",
+  "description": "extract gbk message source",
   "bin": {
-    "extra-gbk": "./bin/index.js"
+    "extract-gbk": "./bin/index.js"
   },
   "author": {
     "name": "xmg",
