--- a/package.json
+++ b/package.json
@@ -25,5 +25,6 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/codeManage/extract-gbk.git"
-  }
+  },
+  "publishConfig": { "registry": "https://npm.pkg.github.com/" }
 }
